--- a/changelog
+++ b/changelog
@@ -1,3 +1,12 @@
+
+version 0.0.4   29/07/2010
+
+[+] added: loadUnicodeString routine
+[+] added: loadAnsiStr routine
+[+] added: drvobj.py sample
+[+] fixed: issue #6747 ( windbg script's call parameters passing into python script added )
+
+
 version 0.0.3   28/07/2010
 
 [!] bugfix: typedVar
