ready for release
git-svn-id: https://pykd.svn.codeplex.com/svn@53516 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+version 0.0.5   03/08/2010
+
+[!] fixed: issue #6769 ( Args parsing is not supporting quoting )
+[+] added: proclist.py sample
+[+] added: loadTypedVarList routine
+[!] fixed: typedVar
 
 version 0.0.4   29/07/2010
 
