ready for release
git-svn-id: https://pykd.svn.codeplex.com/svn@53848 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+version 0.0.6   09/08/2010
+
+[+] added: dbgExtensionClass class for calling windbg extension command from python script
+[!] bug fixed: issue #6812 ( windbg ext command !py does not work with full path )
+[+] added: !pycmd command for windbg extension
+
+
 version 0.0.5   03/08/2010
 
 [!] fixed: issue #6769 ( Args parsing is not supporting quoting )
