git-svn-id: https://pykd.svn.codeplex.com/svn@60276 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+version 0.0.14 17/01/2011
+[+] added : __getattribute__ method for dbgModuleClass class to simplify access to module symbols's offsets
+[+] added : __str__ method for typedVar class, so it can be outputed by print operator
+[!] bug fixed: issue #8103 ( !py windbg extension imports modules into the global space )
+[~] changed: eval() renamed to expr()
+
+
 version 0.0.13 27/12/2010
 [+] added : go, step, trace routine for control execution
 [+] added : bp class for control breakpoints
