[pykd] updated: changelog
git-svn-id: https://pykd.svn.codeplex.com/svn@70217 9b283d60-5439-405e-af05-b73fd8c4d996

--- a/changelog
+++ b/changelog
@@ -1,5 +1,6 @@
-version 0.0.20 29/09/2011
+version 0.0.20 05/10/2011
 
+[+] added : routine getProcessorType ( return type of physical processor  )
 [+] added : routine breakin ( Break into debugger ) 
 [+] added : cpuReg constructor with index parameter 
 [+] added : attachProcess routine ( attach debugger to the exsisting process ) 
